# optix7_advance_PKUcourse

./: .gitignore  CMakeLists.txt  README.md
common/gdt/cmake/: FindOptiX.cmake
common/glfWindow/: GLFWindow.cpp  GLFWindow.h
evaluate/: diff.txt  draw_plot.py  evaluate.py  mse_bdpt  mse_brdf  mse_lvcbpt  mse_mis  mse_nee
experiment/BDPT/: diff_10.txt  diff_30.txt  diff_300.txt
experiment/BRDF/: diff_10.txt  diff_30.txt
experiment/LVCBPT/: diff_10.txt  diff_180.txt  diff_30.txt
experiment/MIS/: diff_10.txt  diff_30.txt
experiment/NEE/: diff_10.txt  diff_30.txt
models/: easy.mtl  fourmirror.mtl  sponza.mtl  sponza2.mtl
raytrace_work/: BDPT.h  BDPT_function.h  CMakeLists.txt  LaunchParams.h  LightParams.h  Model.cpp  Model.h  PRD.h  SBTdata.h  SampleRenderer.cpp  SampleRenderer.h  config.h  devicePrograms.cu  main.cpp  toneMap.cu  tool_function.h
